# locate-pricing-engine-eaotun

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
src/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  tsconfig.json
src/backend/api/: __init__.py  deps.py  utils.py
src/backend/api/v1/: __init__.py  api.py
src/backend/config/: __init__.py  environment.py  logging_config.py  settings.py
src/backend/core/: __init__.py  auth.py  constants.py  errors.py  exceptions.py  logging.py  middleware.py  security.py
src/backend/db/: __init__.py  base.py  init_db.py  session.py  utils.py
src/backend/db/crud/: __init__.py  api_keys.py  audit.py  base.py  brokers.py  stocks.py  volatility.py
src/backend/db/migrations/: __init__.py  env.py
src/backend/db/models/: __init__.py  api_key.py  audit.py  base.py  broker.py  stock.py  volatility.py
src/backend/infrastructure/: __init__.py  alarms.ts  aws.ts  aws_secret_manager.ts  cloudwatch.ts  eks.ts  rds.ts  redis.ts  security_groups.ts  vpc.ts
src/backend/middleware/: __init__.py  authentication.py  error_handling.py  logging.py  rate_limiting.py  tracing.py
src/backend/schemas/: __init__.py  api_key.py  audit.py  broker.py  calculation.py  error.py  request.py  response.py  stock.py  volatility.py
src/backend/scripts/: __init__.py  benchmark.py  generate_api_key.py  health_check.py  run_migrations.py  seed_data.py
src/backend/services/: __init__.py
src/backend/services/audit/: __init__.py  logger.py  transactions.py  utils.py
src/backend/services/cache/: __init__.py  local.py  redis.py  strategies.py  utils.py
src/backend/services/calculation/: __init__.py  borrow_rate.py  event_risk.py  formulas.py  locate_fee.py  utils.py  volatility.py
src/backend/services/data/: __init__.py  audit.py  brokers.py  utils.py  volatility.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/api/: __init__.py  test_auth.py  test_calculate.py  test_health.py  test_rates.py
src/backend/tests/db/: __init__.py  test_crud_brokers.py  test_crud_stocks.py
src/backend/tests/fixtures/: __init__.py  api_responses.py  brokers.py  stocks.py  volatility.py
src/backend/tests/services/: __init__.py
src/backend/tests/utils/: __init__.py  test_circuit_breaker.py  test_validation.py
src/backend/utils/: __init__.py  circuit_breaker.py  date.py  logging.py  math.py  retry.py  timing.py  validation.py
src/test/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
src/test/ci/: README.md  __init__.py
src/test/ci/github_actions/: e2e_test_workflow.yml  integration_test_workflow.yml  nightly_test_workflow.yml  performance_test_workflow.yml  security_scan_workflow.yml
src/test/compliance_tests/: README.md  __init__.py  test_api_documentation.py  test_audit_trail.py  test_calculation_accuracy.py  test_data_retention.py  test_rate_conformity.py
src/test/compliance_tests/helpers/: __init__.py  audit_validation.py  calculation_validation.py
src/test/data_generators/: README.md  __init__.py  api_keys.py  brokers.py  config.py  event_data.py  market_data.py  requirements.txt  run_generation.py  stocks.py  volatility.py
src/test/docker/: docker-compose.test.yml
src/test/e2e_tests/: README.md  __init__.py  test_api_versioning.py  test_audit_logging.py  test_caching_behavior.py  test_data_refresh.py  test_full_calculation_flow.py  test_security_features.py  test_system_resilience.py
src/test/e2e_tests/config/: __init__.py  settings.py
src/test/e2e_tests/fixtures/: __init__.py  environment.py  test_data.py
src/test/e2e_tests/helpers/: __init__.py  api_client.py  test_data.py  validation.py
src/test/integration_tests/: README.md  __init__.py  test_api_gateway.py  test_authentication.py  test_authorization.py  test_cache_service.py  test_calculation_service.py  test_data_service.py  test_external_api_client.py  test_fallback_mechanisms.py  test_rate_limiting.py
src/test/integration_tests/config/: __init__.py  settings.py
src/test/integration_tests/fixtures/: __init__.py  api_responses.py  brokers.py  stocks.py  volatility.py
src/test/integration_tests/helpers/: __init__.py  api_client.py  assertions.py  data_generators.py  mock_server.py
src/test/load_testing/: README.md  analyze_results.py  config.yaml  locustfile.py  requirements.txt  run_tests.sh
src/test/load_testing/scenarios/: __init__.py  borrow_rate_scenario.py  calculate_fee_scenario.py  mixed_workload_scenario.py
src/test/metrics/: README.md  __init__.py
src/test/metrics/collectors/: __init__.py  api_metrics.py  calculation_metrics.py  resource_metrics.py
src/test/metrics/exporters/: __init__.py  csv.py  json.py  prometheus.py
src/test/metrics/visualizers/: __init__.py  dashboard.py  generate_charts.py
src/test/mock_servers/: README.md  __init__.py  docker-compose.yml  requirements.txt
src/test/mock_servers/event_api/: __init__.py  app.py  data.py  handlers.py
src/test/mock_servers/market_api/: __init__.py  app.py  data.py  handlers.py
src/test/mock_servers/seclend_api/: __init__.py  app.py  data.py  handlers.py
src/test/performance_tests/: README.md  __init__.py  test_api_latency.py  test_cache_performance.py  test_calculation_speed.py  test_database_performance.py  test_resilience_under_load.py  test_resource_utilization.py  test_throughput.py
src/test/performance_tests/config/: __init__.py  settings.py
src/test/performance_tests/fixtures/: __init__.py  environment.py  test_data.py
src/test/performance_tests/helpers/: analysis.py  (+2 more)
src/test/scripts/: clean_test_data.py  generate_test_report.py  run_all_tests.sh  run_e2e_tests.sh  run_integration_tests.sh  run_mock_servers.sh  run_performance_tests.sh  run_security_tests.sh  setup_test_env.sh
src/test/security_tests/: README.md  __init__.py  test_api_security.py  test_authentication.py  test_authorization.py  test_data_encryption.py  test_dependency_vulnerabilities.py  test_input_validation.py  test_rate_limiting.py
(+102 files in other folders)
